syntax = "proto3";
package service.chat;

//import "google/protobuf/timestamp.proto";

message ChatMessage {
  string messageId = 1;
  string chatId = 2;
  string senderId = 3;
  string recipientId = 4;
  string body = 5;
  //google.protobuf.Timestamp timestamp = 6;
}