syntax = "proto3";
package service.chat;

enum Status {
  UNKNOWN = 0;
  SUCCESS = 1;
  UNKNOWN_CHAT_INFO = 2;
  ERROR = 3;
  CLIENT_NOT_LOGGED = 4;
}